...
                                borderRadius: BorderRadius.circular(20),
                                borderSide: const BorderSide(
                                  color: Colors.blue, width: 3,
                                ),
                              ),
                              suffixIcon: IconButton(
                                key: const ValueKey('convertButton'),
                                icon: const Icon(Icons.arrow_forward),
                                onPressed: () async {
                                  pressedButton(context);
                                },
                              ),
                            ),
...
                    ),
                    const SizedBox(width: 10),
                    Expanded(
                      child: Column(
                        children: [
                          DropdownButtonFormField(
                            key: const ValueKey('dropdownFrom'),
                            decoration: InputDecoration(
                              labelText: 'FROM',
                              enabledBorder: OutlineInputBorder(
                                borderRadius: BorderRadius.circular(20),
                                borderSide: const BorderSide(
                                  color: Colors.black, width: 3,),
...
                                  // Manejar cualquier error que pueda ocurrir durante la operación
                                  print('Error: $e');
                                  // Aquí puedes mostrar un mensaje de error si es necesario
                                }
                              } else {
                                createErrorWindow(context,
                                    'Origin must be different than destiny');
                              }
                            },


                          ),
                        ],
...
                                                  .of<Conversion>(
                                                  context, listen: false)
                                                  .conversions[index].result);
                                            } else {
                                              // Mostrar un SnackBar de error usando la función
                                              createErrorWindow(context,
                                                  'Esta moneda ya está en favoritos.');
                                            }
                                          }
                                        },
                                      ),
                                      SizedBox(
                                        width: 200,
                                        child: DropdownButtonFormField(
                                          key: const ValueKey('dropdownTo'),
                                          decoration: InputDecoration(
                                            labelText: 'TO',
                                            enabledBorder: OutlineInputBorder(
                                              borderRadius: BorderRadius
                                                  .circular(20),
                                              borderSide: const BorderSide(
...
